# pythonpath-setter

./: README.md  backup.py  environment.yml  package-lock.json  package.json  pyproject.toml  setup.sh
src/: extension.ts
